# Duck-God-Discord-Bot

./: .breakpoints  Database.db  README.md  backgroundtask.py  database.py  duckcult.py  keep_alive.py  main.py  main.py.a8bf0249c558cbdedccfafce74a9a4c2.tmp  mainbank.json  music.py  music_cog.py  pyproject.toml  roastlist.py  test.py
cogs/: Fun.py  Help.py  Music.py
