[tool.poetry]
name = "repl_python3_FusionSids-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pyrandmeme = "^0.0.6"
Flask = "^2.0.1"
replit = "^3.1.0"
google_api = "^0.1.12"
google-api-python-client = "^2.13.0"
ping3 = "^2.9.1"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.6.6"
python-dotenv = "^0.19.0"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
